--- a/index.html
+++ b/index.html
@@ -3,169 +3,211 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Research Support Sitemap</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-</head>
-<body class="bg-gray-50 text-gray-800">
-  <div class="max-w-7xl mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-6">Research & Innovation Sitemap</h1>
+  <title>Research & Innovation Site Map</title>
 
-    <!-- Controls -->
-    <div class="flex flex-wrap gap-4 mb-6">
-      <button id="treeBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">Tree View</button>
-      <button id="sitemapBtn" class="px-4 py-2 bg-green-600 text-white rounded-lg shadow hover:bg-green-700">Sitemap View</button>
-      <input id="search" type="search" placeholder="Search..." class="px-4 py-2 border rounded-lg w-64" />
-    </div>
+  <!-- Bootstrap -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
 
-    <!-- Container -->
-    <div id="visualisation" class="bg-white p-6 rounded-2xl shadow"></div>
-  </div>
-
-  <script>
-    async function loadData() {
-      const res = await fetch('site_data.json');
-      return await res.json();
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #f8f9fa;
     }
 
-    function renderTree(data) {
-      const width = 1000, height = 600;
-      const root = d3.hierarchy(data);
+    #tree, #sitemap {
+      margin-top: 20px;
+    }
 
-      root.dx = 20;
-      root.dy = width / (root.height + 2);
-      d3.tree().nodeSize([root.dx, root.dy])(root);
+    /* Sitemap cards */
+    .sitemap-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 15px;
+    }
+
+    .sitemap-card {
+      background: white;
+      border-radius: 8px;
+      padding: 15px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+
+    .sitemap-card:hover {
+      transform: translateY(-3px);
+    }
+
+    .sitemap-card h5 {
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+      color: #0d6efd;
+    }
+
+    .sitemap-card ul {
+      padding-left: 20px;
+      margin: 0;
+    }
+
+    .sitemap-card li {
+      font-size: 0.95rem;
+      margin-bottom: 5px;
+    }
+
+    /* D3 tree styling */
+    .node circle {
+      fill: #0d6efd;
+      stroke: #fff;
+      stroke-width: 2px;
+    }
+
+    .node text {
+      font-size: 12px;
+    }
+
+    .link {
+      fill: none;
+      stroke: #ccc;
+      stroke-width: 2px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1 class="mb-4">Research & Innovation Site Map</h1>
+
+    <!-- Controls -->
+    <div class="d-flex gap-2 mb-3">
+      <button id="treeBtn" class="btn btn-primary">Tree View</button>
+      <button id="sitemapBtn" class="btn btn-secondary">Sitemap View</button>
+    </div>
+
+    <!-- Tree View -->
+    <div id="tree"></div>
+
+    <!-- Sitemap View -->
+    <div id="sitemap" style="display:none;"></div>
+  </div>
+
+  <!-- D3.js -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script>
+    // Load data
+    fetch("site-data.json")
+      .then((res) => res.json())
+      .then((data) => {
+        renderTree(data);
+        renderSitemap(data);
+      });
+
+    // Switch views
+    document.getElementById("treeBtn").addEventListener("click", () => {
+      document.getElementById("tree").style.display = "block";
+      document.getElementById("sitemap").style.display = "none";
+    });
+    document.getElementById("sitemapBtn").addEventListener("click", () => {
+      document.getElementById("tree").style.display = "none";
+      document.getElementById("sitemap").style.display = "block";
+    });
+
+    // TREE VIEW
+    function renderTree(data) {
+      const width = 900;
+      const dx = 20;
+      const dy = 200;
+
+      const tree = d3.tree().nodeSize([dx, dy]);
+      const root = d3.hierarchy(data);
+      tree(root);
 
       let x0 = Infinity;
       let x1 = -x0;
-      root.each(d => {
+      root.each((d) => {
         if (d.x > x1) x1 = d.x;
         if (d.x < x0) x0 = d.x;
       });
 
-      const svg = d3.create("svg")
-        .attr("viewBox", [0, 0, width, x1 - x0 + root.dx * 2])
-        .classed("w-full", true);
+      const svg = d3
+        .select("#tree")
+        .append("svg")
+        .attr("viewBox", [0, 0, width, x1 - x0 + dx * 2])
+        .style("font", "12px sans-serif");
 
-      const g = svg.append("g").attr("transform", `translate(${root.dy / 3},${root.dx - x0})`);
+      const g = svg
+        .append("g")
+        .attr("transform", `translate(${dy / 3},${dx - x0})`);
 
-      // Links
       g.append("g")
+        .attr("fill", "none")
+        .attr("stroke", "#555")
+        .attr("stroke-opacity", 0.4)
+        .attr("stroke-width", 1.5)
         .selectAll("path")
         .data(root.links())
         .join("path")
-        .attr("fill", "none")
-        .attr("stroke", "#ccc")
-        .attr("stroke-width", 2)
-        .attr("d", d3.linkHorizontal().x(d => d.y).y(d => d.x));
+        .attr(
+          "d",
+          d3
+            .linkHorizontal()
+            .x((d) => d.y)
+            .y((d) => d.x)
+        );
 
-      // Nodes
-      const node = g.append("g")
+      const node = g
+        .append("g")
+        .attr("stroke-linejoin", "round")
+        .attr("stroke-width", 3)
         .selectAll("g")
         .data(root.descendants())
         .join("g")
-        .attr("transform", d => `translate(${d.y},${d.x})`);
+        .attr("transform", (d) => `translate(${d.y},${d.x})`);
 
-      node.append("circle")
-        .attr("r", 6)
-        .attr("fill", d => d.children ? "#2563eb" : "#16a34a")
-        .attr("stroke", "#fff")
-        .attr("stroke-width", 2);
+      node
+        .append("circle")
+        .attr("fill", (d) => (d.children ? "#0d6efd" : "#198754"))
+        .attr("r", 5);
 
-      node.append("a")
-        .attr("href", d => d.data.url || null)
-        .attr("target", "_blank")
+      node
         .append("text")
-        .attr("dy", "0.32em")
-        .attr("x", d => d.children ? -10 : 10)
-        .attr("text-anchor", d => d.children ? "end" : "start")
-        .attr("class", "font-medium text-gray-700 hover:underline")
-        .text(d => d.data.name);
-
-      return svg.node();
+        .attr("dy", "0.31em")
+        .attr("x", (d) => (d.children ? -10 : 10))
+        .attr("text-anchor", (d) => (d.children ? "end" : "start"))
+        .text((d) => d.data.name)
+        .clone(true)
+        .lower()
+        .attr("stroke", "white");
     }
 
+    // SITEMAP VIEW
     function renderSitemap(data) {
-      const container = document.createElement('div');
-      container.className = "grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6";
-
-      function renderSection(node) {
-        const card = document.createElement('div');
-        card.className = "p-4 bg-gray-100 rounded-xl shadow hover:shadow-md";
-
-        const title = document.createElement('h2');
-        title.className = "text-lg font-semibold mb-3";
-        title.textContent = node.name;
-        card.appendChild(title);
-
+      const container = document.getElementById("sitemap");
+      const buildCards = (node, parent) => {
         if (node.children) {
-          const list = document.createElement('ul');
-          list.className = "space-y-2";
-          node.children.forEach(child => {
-            const li = document.createElement('li');
-            if (child.url) {
-              li.innerHTML = `<a href="${child.url}" target="_blank" class="text-blue-600 hover:underline">${child.name}</a>`;
-            } else {
-              li.textContent = child.name;
+          node.children.forEach((child) => buildCards(child, parent));
+        } else {
+          const card = document.createElement("div");
+          card.className = "sitemap-card";
+          card.innerHTML = `
+            <h5>${node.name}</h5>
+            ${
+              node.children
+                ? `<ul>${node.children
+                    .map((c) => `<li>${c.name}</li>`)
+                    .join("")}</ul>`
+                : ""
             }
-            list.appendChild(li);
-          });
-          card.appendChild(list);
+          `;
+          parent.appendChild(card);
         }
-        return card;
-      }
-
-      if (data.children) {
-        data.children.forEach(child => {
-          container.appendChild(renderSection(child));
-        });
-      }
-
-      return container;
-    }
-
-    function filterTree(node, term) {
-      if (!term) return node;
-      const match = node.name.toLowerCase().includes(term.toLowerCase());
-      if (node.children) {
-        const filteredChildren = node.children.map(child => filterTree(child, term)).filter(Boolean);
-        if (filteredChildren.length || match) {
-          return { ...node, children: filteredChildren };
-        }
-      }
-      return match ? { ...node } : null;
-    }
-
-    (async () => {
-      const rawData = await loadData();
-      let currentMode = 'tree';
-
-      const vis = document.getElementById('visualisation');
-      const searchInput = document.getElementById('search');
-
-      function render() {
-        vis.innerHTML = '';
-        const filtered = filterTree(rawData, searchInput.value);
-        if (!filtered) {
-          vis.innerHTML = '<p class="text-red-500">No results found</p>';
-          return;
-        }
-        if (currentMode === 'tree') vis.appendChild(renderTree(filtered));
-        else vis.appendChild(renderSitemap(filtered));
-      }
-
-      document.getElementById('treeBtn').onclick = () => {
-        currentMode = 'tree';
-        render();
       };
-      document.getElementById('sitemapBtn').onclick = () => {
-        currentMode = 'sitemap';
-        render();
-      };
-      searchInput.oninput = render;
-
-      render();
-    })();
+      const wrapper = document.createElement("div");
+      wrapper.className = "sitemap-container";
+      buildCards(data, wrapper);
+      container.appendChild(wrapper);
+    }
   </script>
 </body>
 </html>
